--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -24,6 +24,7 @@
   "src.features.main.DeleteFolderConfirm": "Are you sure to delete this folder?",
   "src.features.main.Dismiss": "Dismiss",
   "src.features.main.Edit": "Edit",
+  "src.features.main.Explorer": "Explorer",
   "src.features.main.File": "File",
   "src.features.main.FileAlreadyExists": "The file with the name already exists",
   "src.features.main.FileDoesNotExists": "The file with the name does not exists",
@@ -31,18 +32,23 @@
   "src.features.main.FolderAlreadyExists": "The file with the name already exists",
   "src.features.main.FolderDoesNotExists": "The folder with the name does not exists",
   "src.features.main.FolderName": "Folder name",
-  "src.features.main.GetStartedDescription": "Please select or create a file to start",
-  "src.features.main.GetStartedTitle": "Let's get started!",
   "src.features.main.ItemNotFound": "No items found",
+  "src.features.main.MoreOption": "More option",
   "src.features.main.Name": "Name",
   "src.features.main.NewFile": "New file",
   "src.features.main.NewFolder": "New folder",
+  "src.features.main.NoDataDescription": "Please select or create a file to start",
+  "src.features.main.NoDataTitle": "There is nothing here",
+  "src.features.main.NoItemFound": "No item found",
   "src.features.main.OK": "OK",
+  "src.features.main.OpenFileLocation": "Open file location",
   "src.features.main.OpenWithOneDrive": "Open with OneDrive",
+  "src.features.main.Refresh": "Refresh",
   "src.features.main.RenameFile": "Rename file",
   "src.features.main.RenameFolder": "Rename folder",
   "src.features.main.RootFolder": "My files",
   "src.features.main.Save": "Save",
+  "src.features.main.Search": "Search",
   "src.features.main.SignOut": "Sign out",
   "src.features.main.UpdatedDate": "Updated date",
   "src.features.main.WorkFolderSelection": "Select working directory"
