--- a/src/translations/ja.json
+++ b/src/translations/ja.json
@@ -24,6 +24,7 @@
   "src.features.main.DeleteFolderConfirm": "フォルダーを削除します。よろしいですか？",
   "src.features.main.Dismiss": "閉じる",
   "src.features.main.Edit": "編集",
+  "src.features.main.Explorer": "エクスプローラー",
   "src.features.main.File": "ファイル",
   "src.features.main.FileAlreadyExists": "指定した名前のファイルはすでに存在します",
   "src.features.main.FileDoesNotExists": "指定した名前のファイルは存在しません",
@@ -31,18 +32,23 @@
   "src.features.main.FolderAlreadyExists": "指定した名前のフォルダー　はすでに存在します",
   "src.features.main.FolderDoesNotExists": "指定した名前のフォルダーは存在しません",
   "src.features.main.FolderName": "フォルダー名",
-  "src.features.main.GetStartedDescription": "開始するにはファイルを選択または作成してください",
-  "src.features.main.GetStartedTitle": "はじめましょう！",
   "src.features.main.ItemNotFound": "アイテムが見つかりません",
+  "src.features.main.MoreOption": "その他のオプション",
   "src.features.main.Name": "名前",
   "src.features.main.NewFile": "新しいファイル",
   "src.features.main.NewFolder": "新しいフォルダー",
+  "src.features.main.NoDataDescription": "開始するにはファイルを選択または作成してください",
+  "src.features.main.NoDataTitle": "ここには何もありません",
+  "src.features.main.NoItemFound": "アイテムが見つかりません",
   "src.features.main.OK": "OK",
+  "src.features.main.OpenFileLocation": "ファイルの場所を開く",
   "src.features.main.OpenWithOneDrive": "OneDrive で開く",
+  "src.features.main.Refresh": "最新の状態に更新",
   "src.features.main.RenameFile": "ファイル名の変更",
   "src.features.main.RenameFolder": "フォルダー名の変更",
   "src.features.main.RootFolder": "ファイル",
   "src.features.main.Save": "保存",
+  "src.features.main.Search": "検索",
   "src.features.main.SignOut": "サインアウト",
   "src.features.main.UpdatedDate": "更新日時",
   "src.features.main.WorkFolderSelection": "作業ディレクトリの選択"
