--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1,59 +1,56 @@
 {
-  "src.features.error.AppName": "Hitofude",
-  "src.features.error.Error404Description": "Page not found",
-  "src.features.error.Error404Title": "We can't find the page you're looking for",
-  "src.features.error.Error500Description": "Please try refreshing your browser",
-  "src.features.error.Error500Title": "Something went wrong",
-  "src.features.home.AppDescription": "Online Markdown Editor for Microsoft 365",
-  "src.features.home.AppName": "Hitofude",
-  "src.features.home.FeatureDescriprtion1": "A web application that enables to you to write Markdown file via OneDrive (Personal, work or school).",
-  "src.features.home.FeatureDescriprtion2": "Only runs client JavaScript, no server code is executed.",
-  "src.features.home.FeatureDescriprtion3": "It's easy to get started. Just sign in.",
-  "src.features.home.FeatureTitle": "What is Hitofude?",
-  "src.features.home.GitHub": "GitHub",
-  "src.features.home.PrivacyPolicy": "Privacy Policy",
-  "src.features.home.SignIn": "Sign in with Microsoft account",
-  "src.features.home.TermsAndConditions": "Terms and Conditions",
-  "src.features.main.AppName": "Hitofude",
-  "src.features.main.Back": "Back",
-  "src.features.main.Cancel": "Cancel",
-  "src.features.main.CopyFile": "Copy file",
-  "src.features.main.DeleteFile": "Delete file",
-  "src.features.main.DeleteFileConfirm": "Are you sure to delete this file?",
-  "src.features.main.DeleteFolder": "Delete folder",
-  "src.features.main.DeleteFolderConfirm": "Are you sure to delete this folder?",
-  "src.features.main.Dismiss": "Dismiss",
-  "src.features.main.Edit": "Edit",
-  "src.features.main.Explorer": "Explorer",
-  "src.features.main.File": "File",
-  "src.features.main.FileAlreadyExists": "The file with the name already exists",
-  "src.features.main.FileDoesNotExists": "The file with the name does not exists",
-  "src.features.main.FileName": "File name",
-  "src.features.main.FolderAlreadyExists": "The file with the name already exists",
-  "src.features.main.FolderDoesNotExists": "The folder with the name does not exists",
-  "src.features.main.FolderName": "Folder name",
-  "src.features.main.HideUnsupportedFiles": "Hide other files",
-  "src.features.main.ItemNotFound": "No items found",
-  "src.features.main.MoreOption": "More option",
-  "src.features.main.Name": "Name",
-  "src.features.main.NewFile": "New file",
-  "src.features.main.NewFolder": "New folder",
-  "src.features.main.NoDataDescription": "Please select or create a file to start",
-  "src.features.main.NoDataTitle": "There is nothing here",
-  "src.features.main.NoItemFound": "No item found",
-  "src.features.main.OK": "OK",
-  "src.features.main.OpenFileLocation": "Open file location",
-  "src.features.main.OpenWithOneDrive": "Open with OneDrive",
-  "src.features.main.Refresh": "Refresh",
-  "src.features.main.RenameFile": "Rename file",
-  "src.features.main.RenameFolder": "Rename folder",
-  "src.features.main.RootFolder": "My files",
-  "src.features.main.Save": "Save",
-  "src.features.main.Search": "Search",
-  "src.features.main.ShowUnsupportedFiles": "Show other files",
-  "src.features.main.SignOut": "Sign out",
-  "src.features.main.UnsupportedFileDescription": "Unsupported file format",
-  "src.features.main.UnsupportedFileTitle": "Cannot open this file",
-  "src.features.main.UpdatedDate": "Updated date",
-  "src.features.main.WorkFolderSelection": "Select working directory"
+  "/rjLPg": "Please select or create a file to start",
+  "0L2J5T": "New file",
+  "14KiwR": "There is nothing here",
+  "47FYwb": "Cancel",
+  "6qF/vN": "Terms and Conditions",
+  "6tm4ZV": "What is Hitofude?",
+  "7BAvD0": "Show other files",
+  "7DoGdQ": "Hitofude",
+  "7atPs2": "Are you sure to delete this folder?",
+  "8Epn0E": "More option",
+  "8ExVYq": "Rename folder",
+  "9ZoFpI": "Delete file",
+  "AbnnL+": "Sign in with Microsoft account",
+  "B60rtd": "Open with OneDrive",
+  "DcY8fl": "Updated date",
+  "HAlOn1": "Name",
+  "HKsvaG": "Hide other files",
+  "HjkLKL": "Unsupported file format",
+  "JqiqNj": "Something went wrong",
+  "M0iO6Z": "Delete folder",
+  "OijyGx": "We can't find the page you're looking for",
+  "QRccCM": "Page not found",
+  "RolcOL": "Only runs client JavaScript, no server code is executed.",
+  "TDaF6J": "Dismiss",
+  "TNqh3Y": "A web application that enables to you to write Markdown file via OneDrive (Personal, work or school).",
+  "VCHJad": "New folder",
+  "Vb7Qzm": "The folder with the name does not exists",
+  "VcZRoJ": "Rename file",
+  "VlCOJS": "The file with the name already exists",
+  "WSCjCg": "No items found",
+  "Z5spcL": "Please try refreshing your browser",
+  "bJIPmM": "The folder with the name already exists",
+  "bYbrKK": "My files",
+  "cyR7Kh": "Back",
+  "f/YV6d": "It's easy to get started. Just sign in.",
+  "gfMwV+": "Cannot open this file",
+  "gyrIEl": "File",
+  "hYNDAD": "Open file location",
+  "jvo0vs": "Save",
+  "kAEQyV": "OK",
+  "lR/7o8": "Folder name",
+  "mJN/zn": "Explorer",
+  "olfaAj": "The file with the name does not exists",
+  "p69pc3": "Online Markdown Editor for Microsoft 365",
+  "pFkv/g": "Copy file",
+  "ppAn7O": "File name",
+  "rELDbB": "Refresh",
+  "sQtSD2": "Are you sure to delete this file?",
+  "utNSND": "Select working directory",
+  "vx0nkZ": "Privacy Policy",
+  "wEQDC6": "Edit",
+  "wO9wb5": "GitHub",
+  "xXbJso": "Sign out",
+  "xmcVZ0": "Search"
 }
