--- a/src/translations/ja.json
+++ b/src/translations/ja.json
@@ -1,59 +1,56 @@
 {
-  "src.features.error.AppName": "Hitofude",
-  "src.features.error.Error404Description": "お探しのページを見つけることができませんでした",
-  "src.features.error.Error404Title": "ページが見つかりません",
-  "src.features.error.Error500Description": "お使いのブラウザーを更新してください",
-  "src.features.error.Error500Title": "問題が発生しました",
-  "src.features.home.AppDescription": "オンライン Markdown エディター for Microsoft 365",
-  "src.features.home.AppName": "Hitofude",
-  "src.features.home.FeatureDescriprtion1": "OneDrive (個人、職場または学校) で Markdown ファイルを書くための Web アプリケーションです。",
-  "src.features.home.FeatureDescriprtion2": "クライアントの JavaScript コードのみで動作し、サーバーのコードを含みません。",
-  "src.features.home.FeatureDescriprtion3": "はじめるのは簡単です。サインインするだけです。",
-  "src.features.home.FeatureTitle": "Hitofude とは？",
-  "src.features.home.GitHub": "GitHub",
-  "src.features.home.PrivacyPolicy": "プライバシー ポリシー",
-  "src.features.home.SignIn": "Microsoft アカウントでサインイン",
-  "src.features.home.TermsAndConditions": "利用規約",
-  "src.features.main.AppName": "Hitofude",
-  "src.features.main.Back": "戻る",
-  "src.features.main.Cancel": "キャンセル",
-  "src.features.main.CopyFile": "ファイルのコピー",
-  "src.features.main.DeleteFile": "ファイルの削除",
-  "src.features.main.DeleteFileConfirm": "ファイルを削除します。よろしいですか？",
-  "src.features.main.DeleteFolder": "フォルダーの削除",
-  "src.features.main.DeleteFolderConfirm": "フォルダーを削除します。よろしいですか？",
-  "src.features.main.Dismiss": "閉じる",
-  "src.features.main.Edit": "編集",
-  "src.features.main.Explorer": "エクスプローラー",
-  "src.features.main.File": "ファイル",
-  "src.features.main.FileAlreadyExists": "指定した名前のファイルはすでに存在します",
-  "src.features.main.FileDoesNotExists": "指定した名前のファイルは存在しません",
-  "src.features.main.FileName": "ファイル名",
-  "src.features.main.FolderAlreadyExists": "指定した名前のフォルダーはすでに存在します",
-  "src.features.main.FolderDoesNotExists": "指定した名前のフォルダーは存在しません",
-  "src.features.main.FolderName": "フォルダー名",
-  "src.features.main.HideUnsupportedFiles": "その他のファイルを非表示",
-  "src.features.main.ItemNotFound": "アイテムが見つかりません",
-  "src.features.main.MoreOption": "その他のオプション",
-  "src.features.main.Name": "名前",
-  "src.features.main.NewFile": "新しいファイル",
-  "src.features.main.NewFolder": "新しいフォルダー",
-  "src.features.main.NoDataDescription": "開始するにはファイルを選択または作成してください",
-  "src.features.main.NoDataTitle": "ここには何もありません",
-  "src.features.main.NoItemFound": "アイテムが見つかりません",
-  "src.features.main.OK": "OK",
-  "src.features.main.OpenFileLocation": "ファイルの場所を開く",
-  "src.features.main.OpenWithOneDrive": "OneDrive で開く",
-  "src.features.main.Refresh": "最新の状態に更新",
-  "src.features.main.RenameFile": "ファイル名の変更",
-  "src.features.main.RenameFolder": "フォルダー名の変更",
-  "src.features.main.RootFolder": "ファイル",
-  "src.features.main.Save": "保存",
-  "src.features.main.Search": "検索",
-  "src.features.main.ShowUnsupportedFiles": "その他のファイルを表示",
-  "src.features.main.SignOut": "サインアウト",
-  "src.features.main.UnsupportedFileDescription": "サポートされていないファイル形式です",
-  "src.features.main.UnsupportedFileTitle": "ファイルを開けません",
-  "src.features.main.UpdatedDate": "更新日時",
-  "src.features.main.WorkFolderSelection": "作業ディレクトリの選択"
+  "/rjLPg": "開始するにはファイルを選択または作成してください",
+  "0L2J5T": "新しいファイル",
+  "14KiwR": "ここには何もありません",
+  "47FYwb": "キャンセル",
+  "6qF/vN": "利用規約",
+  "6tm4ZV": "Hitofude とは？",
+  "7BAvD0": "その他のファイルを表示",
+  "7DoGdQ": "Hitofude",
+  "7atPs2": "フォルダーを削除します。よろしいですか？",
+  "8Epn0E": "その他のオプション",
+  "8ExVYq": "フォルダー名の変更",
+  "9ZoFpI": "ファイルの削除",
+  "AbnnL+": "Microsoft アカウントでサインイン",
+  "B60rtd": "OneDrive で開く",
+  "DcY8fl": "更新日時",
+  "HAlOn1": "名前",
+  "HKsvaG": "その他のファイルを非表示",
+  "HjkLKL": "サポートされていないファイル形式です",
+  "JqiqNj": "問題が発生しました",
+  "M0iO6Z": "フォルダーの削除",
+  "OijyGx": "お探しのページを見つけることができませんでした",
+  "QRccCM": "ページが見つかりません",
+  "RolcOL": "クライアントの JavaScript コードのみで動作し、サーバーのコードを含みません。",
+  "TDaF6J": "閉じる",
+  "TNqh3Y": "OneDrive (個人、職場または学校) で Markdown ファイルを書くための Web アプリケーションです。",
+  "VCHJad": "新しいフォルダー",
+  "Vb7Qzm": "指定した名前のフォルダーは存在しません",
+  "VcZRoJ": "ファイル名の変更",
+  "VlCOJS": "指定した名前のファイルはすでに存在します",
+  "WSCjCg": "アイテムが見つかりません",
+  "Z5spcL": "お使いのブラウザーを更新してください",
+  "bJIPmM": "指定した名前のフォルダーはすでに存在します",
+  "bYbrKK": "ファイル",
+  "cyR7Kh": "戻る",
+  "f/YV6d": "はじめるのは簡単です。サインインするだけです。",
+  "gfMwV+": "ファイルを開けません",
+  "gyrIEl": "ファイル",
+  "hYNDAD": "ファイルの場所を開く",
+  "jvo0vs": "保存",
+  "kAEQyV": "OK",
+  "lR/7o8": "フォルダー名",
+  "mJN/zn": "エクスプローラー",
+  "olfaAj": "指定した名前のファイルは存在しません",
+  "p69pc3": "オンライン Markdown エディター for Microsoft 365",
+  "pFkv/g": "ファイルのコピー",
+  "ppAn7O": "ファイル名",
+  "rELDbB": "最新の状態に更新",
+  "sQtSD2": "ファイルを削除します。よろしいですか？",
+  "utNSND": "作業ディレクトリの選択",
+  "vx0nkZ": "プライバシー ポリシー",
+  "wEQDC6": "編集",
+  "wO9wb5": "GitHub",
+  "xXbJso": "サインアウト",
+  "xmcVZ0": "検索"
 }
