--- a/src/translations/compiled/ja.json
+++ b/src/translations/compiled/ja.json
@@ -107,6 +107,12 @@
       "value": "サポートされていないファイル形式です"
     }
   ],
+  "I3b4hn": [
+    {
+      "type": 0,
+      "value": "バージョン"
+    }
+  ],
   "JqiqNj": [
     {
       "type": 0,
@@ -149,6 +155,12 @@
       "value": "OneDrive (個人、職場または学校) で Markdown ファイルを書くための Web アプリケーションです。"
     }
   ],
+  "TkEsoc": [
+    {
+      "type": 0,
+      "value": "バージョン履歴"
+    }
+  ],
   "VCHJad": [
     {
       "type": 0,
@@ -185,6 +197,12 @@
       "value": "お使いのブラウザーを更新してください"
     }
   ],
+  "agOXPD": [
+    {
+      "type": 0,
+      "value": "サイズ"
+    }
+  ],
   "bJIPmM": [
     {
       "type": 0,
@@ -197,16 +215,16 @@
       "value": "ファイル"
     }
   ],
+  "cyR7Kh": [
+    {
+      "type": 0,
+      "value": "戻る"
+    }
+  ],
   "f/YV6d": [
     {
       "type": 0,
       "value": "はじめるのは簡単です。サインインするだけです。"
-    }
-  ],
-  "fqNVDv": [
-    {
-      "type": 0,
-      "value": "戻る"
     }
   ],
   "gfMwV+": [
