--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -17,6 +17,7 @@
   "HAlOn1": "Name",
   "HKsvaG": "Hide other files",
   "HjkLKL": "Unsupported file format",
+  "I3b4hn": "Version",
   "JqiqNj": "Something went wrong",
   "M0iO6Z": "Delete folder",
   "OijyGx": "We can't find the page you're looking for",
@@ -24,12 +25,14 @@
   "RolcOL": "Only runs client JavaScript, no server code is executed.",
   "TDaF6J": "Dismiss",
   "TNqh3Y": "A web application that enables to you to write Markdown file via OneDrive (Personal, work or school).",
+  "TkEsoc": "Version history",
   "VCHJad": "New folder",
   "Vb7Qzm": "The folder with the name does not exists",
   "VcZRoJ": "Rename file",
   "VlCOJS": "The file with the name already exists",
   "WSCjCg": "No items found",
   "Z5spcL": "Please try refreshing your browser",
+  "agOXPD": "Size",
   "bJIPmM": "The folder with the name already exists",
   "bYbrKK": "My files",
   "cyR7Kh": "Back",
