--- a/src/translations/ja.json
+++ b/src/translations/ja.json
@@ -17,6 +17,7 @@
   "HAlOn1": "名前",
   "HKsvaG": "その他のファイルを非表示",
   "HjkLKL": "サポートされていないファイル形式です",
+  "I3b4hn": "バージョン",
   "JqiqNj": "問題が発生しました",
   "M0iO6Z": "フォルダーの削除",
   "OijyGx": "お探しのページを見つけることができませんでした",
@@ -24,12 +25,14 @@
   "RolcOL": "クライアントの JavaScript コードのみで動作し、サーバーのコードを含みません。",
   "TDaF6J": "閉じる",
   "TNqh3Y": "OneDrive (個人、職場または学校) で Markdown ファイルを書くための Web アプリケーションです。",
+  "TkEsoc": "バージョン履歴",
   "VCHJad": "新しいフォルダー",
   "Vb7Qzm": "指定した名前のフォルダーは存在しません",
   "VcZRoJ": "ファイル名の変更",
   "VlCOJS": "指定した名前のファイルはすでに存在します",
   "WSCjCg": "アイテムが見つかりません",
   "Z5spcL": "お使いのブラウザーを更新してください",
+  "agOXPD": "サイズ",
   "bJIPmM": "指定した名前のフォルダーはすでに存在します",
   "bYbrKK": "ファイル",
   "cyR7Kh": "戻る",
