--- a/src/translations/compiled/en.json
+++ b/src/translations/compiled/en.json
@@ -155,6 +155,12 @@
       "value": "A web application that enables to you to write Markdown file via OneDrive (Personal, work or school)."
     }
   ],
+  "TiR/Hq": [
+    {
+      "type": 0,
+      "value": "Saving..."
+    }
+  ],
   "TkEsoc": [
     {
       "type": 0,
