--- a/src/translations/compiled/ja.json
+++ b/src/translations/compiled/ja.json
@@ -155,6 +155,12 @@
       "value": "OneDrive (個人、職場または学校) で Markdown ファイルを書くための Web アプリケーションです。"
     }
   ],
+  "TiR/Hq": [
+    {
+      "type": 0,
+      "value": "保存しています..."
+    }
+  ],
   "TkEsoc": [
     {
       "type": 0,
