--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -25,6 +25,7 @@
   "RolcOL": "Only runs client JavaScript, no server code is executed.",
   "TDaF6J": "Dismiss",
   "TNqh3Y": "A web application that enables to you to write Markdown file via OneDrive (Personal, work or school).",
+  "TiR/Hq": "Saving...",
   "TkEsoc": "Version history",
   "VCHJad": "New folder",
   "Vb7Qzm": "The folder with the name does not exists",
