--- a/src/translations/ja.json
+++ b/src/translations/ja.json
@@ -25,6 +25,7 @@
   "RolcOL": "クライアントの JavaScript コードのみで動作し、サーバーのコードを含みません。",
   "TDaF6J": "閉じる",
   "TNqh3Y": "OneDrive (個人、職場または学校) で Markdown ファイルを書くための Web アプリケーションです。",
+  "TiR/Hq": "保存しています...",
   "TkEsoc": "バージョン履歴",
   "VCHJad": "新しいフォルダー",
   "Vb7Qzm": "指定した名前のフォルダーは存在しません",
