--- a/src/translations/compiled/ja.json
+++ b/src/translations/compiled/ja.json
@@ -65,6 +65,12 @@
       "value": "フォルダー名の変更"
     }
   ],
+  "9GLOiw": [
+    {
+      "type": 0,
+      "value": "ファイルの復元"
+    }
+  ],
   "9ZoFpI": [
     {
       "type": 0,
@@ -237,6 +243,12 @@
     {
       "type": 0,
       "value": "ファイルを開けません"
+    }
+  ],
+  "ghuZox": [
+    {
+      "type": 0,
+      "value": "保存して閉じる"
     }
   ],
   "gyrIEl": [
