--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -10,6 +10,7 @@
   "7atPs2": "Are you sure to delete this folder?",
   "8Epn0E": "More option",
   "8ExVYq": "Rename folder",
+  "9GLOiw": "Restore file",
   "9ZoFpI": "Delete file",
   "AbnnL+": "Sign in with Microsoft account",
   "B60rtd": "Open with OneDrive",
@@ -38,7 +39,9 @@
   "bYbrKK": "My files",
   "cyR7Kh": "Back",
   "f/YV6d": "It's easy to get started. Just sign in.",
+  "f5cgv/": "Are you sure to restore this file?",
   "gfMwV+": "Cannot open this file",
+  "ghuZox": "Save and Close",
   "gyrIEl": "File",
   "hYNDAD": "Open file location",
   "jvo0vs": "Save",
