--- a/src/translations/ja.json
+++ b/src/translations/ja.json
@@ -10,6 +10,7 @@
   "7atPs2": "フォルダーを削除します。よろしいですか？",
   "8Epn0E": "その他のオプション",
   "8ExVYq": "フォルダー名の変更",
+  "9GLOiw": "ファイルの復元",
   "9ZoFpI": "ファイルの削除",
   "AbnnL+": "Microsoft アカウントでサインイン",
   "B60rtd": "OneDrive で開く",
@@ -38,7 +39,9 @@
   "bYbrKK": "ファイル",
   "cyR7Kh": "戻る",
   "f/YV6d": "はじめるのは簡単です。サインインするだけです。",
+  "f5cgv/": "ファイルを復元します。よろしいですか？",
   "gfMwV+": "ファイルを開けません",
+  "ghuZox": "保存して閉じる",
   "gyrIEl": "ファイル",
   "hYNDAD": "ファイルの場所を開く",
   "jvo0vs": "保存",
