--- a/src/translations/compiled/ja.json
+++ b/src/translations/compiled/ja.json
@@ -1,4 +1,10 @@
 {
+  "/+Itm/": [
+    {
+      "type": 0,
+      "value": "ミニマップを表示"
+    }
+  ],
   "/rjLPg": [
     {
       "type": 0,
@@ -239,6 +245,12 @@
       "value": "はじめるのは簡単です。サインインするだけです。"
     }
   ],
+  "f5cgv/": [
+    {
+      "type": 0,
+      "value": "ファイルを復元します。よろしいですか？"
+    }
+  ],
   "gfMwV+": [
     {
       "type": 0,
@@ -315,6 +327,12 @@
     {
       "type": 0,
       "value": "最新の状態に更新"
+    }
+  ],
+  "rkvFU3": [
+    {
+      "type": 0,
+      "value": "ミニマップを非表示"
     }
   ],
   "sQtSD2": [
