--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1,4 +1,5 @@
 {
+  "/+Itm/": "Show minimap",
   "/rjLPg": "Please select or create a file to start",
   "0L2J5T": "New file",
   "14KiwR": "There is nothing here",
@@ -53,6 +54,7 @@
   "pFkv/g": "Copy file",
   "ppAn7O": "File name",
   "rELDbB": "Refresh",
+  "rkvFU3": "Hide minimap",
   "sQtSD2": "Are you sure to delete this file?",
   "utNSND": "Select working directory",
   "vx0nkZ": "Privacy Policy",
