--- a/src/translations/ja.json
+++ b/src/translations/ja.json
@@ -1,4 +1,5 @@
 {
+  "/+Itm/": "ミニマップを表示",
   "/rjLPg": "開始するにはファイルを選択または作成してください",
   "0L2J5T": "新しいファイル",
   "14KiwR": "ここには何もありません",
@@ -53,6 +54,7 @@
   "pFkv/g": "ファイルのコピー",
   "ppAn7O": "ファイル名",
   "rELDbB": "最新の状態に更新",
+  "rkvFU3": "ミニマップを非表示",
   "sQtSD2": "ファイルを削除します。よろしいですか？",
   "utNSND": "作業ディレクトリの選択",
   "vx0nkZ": "プライバシー ポリシー",
