--- a/src/translations/compiled/en.json
+++ b/src/translations/compiled/en.json
@@ -29,6 +29,12 @@
       "value": "Cancel"
     }
   ],
+  "5q3qC0": [
+    {
+      "type": 0,
+      "value": "Download"
+    }
+  ],
   "6qF/vN": [
     {
       "type": 0,
