--- a/src/translations/compiled/ja.json
+++ b/src/translations/compiled/ja.json
@@ -29,6 +29,12 @@
       "value": "キャンセル"
     }
   ],
+  "5q3qC0": [
+    {
+      "type": 0,
+      "value": "ダウンロード"
+    }
+  ],
   "6qF/vN": [
     {
       "type": 0,
