--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -4,6 +4,7 @@
   "0L2J5T": "New file",
   "14KiwR": "There is nothing here",
   "47FYwb": "Cancel",
+  "5q3qC0": "Download",
   "6qF/vN": "Terms and Conditions",
   "6tm4ZV": "What is Hitofude?",
   "7BAvD0": "Show other files",
