--- a/src/translations/ja.json
+++ b/src/translations/ja.json
@@ -4,6 +4,7 @@
   "0L2J5T": "新しいファイル",
   "14KiwR": "ここには何もありません",
   "47FYwb": "キャンセル",
+  "5q3qC0": "ダウンロード",
   "6qF/vN": "利用規約",
   "6tm4ZV": "Hitofude とは？",
   "7BAvD0": "その他のファイルを表示",
