--- a/src/translations/compiled/ja.json
+++ b/src/translations/compiled/ja.json
@@ -1,10 +1,4 @@
 {
-  "/+Itm/": [
-    {
-      "type": 0,
-      "value": "ミニマップを表示"
-    }
-  ],
   "/rjLPg": [
     {
       "type": 0,
@@ -23,10 +17,28 @@
       "value": "ここには何もありません"
     }
   ],
+  "3cc4Ct": [
+    {
+      "type": 0,
+      "value": "ライト"
+    }
+  ],
   "47FYwb": [
     {
       "type": 0,
       "value": "キャンセル"
+    }
+  ],
+  "5929Xm": [
+    {
+      "type": 0,
+      "value": "外観の変更"
+    }
+  ],
+  "5KHmz1": [
+    {
+      "type": 0,
+      "value": "ミニマップ"
     }
   ],
   "5q3qC0": [
@@ -99,6 +111,12 @@
     {
       "type": 0,
       "value": "OneDrive で開く"
+    }
+  ],
+  "D3idYv": [
+    {
+      "type": 0,
+      "value": "設定"
     }
   ],
   "DcY8fl": [
@@ -335,16 +353,22 @@
       "value": "最新の状態に更新"
     }
   ],
-  "rkvFU3": [
+  "rbrahO": [
     {
       "type": 0,
-      "value": "ミニマップを非表示"
+      "value": "閉じる"
     }
   ],
   "sQtSD2": [
     {
       "type": 0,
       "value": "ファイルを削除します。よろしいですか？"
+    }
+  ],
+  "tOdNiY": [
+    {
+      "type": 0,
+      "value": "ダーク"
     }
   ],
   "utNSND": [
@@ -375,6 +399,12 @@
     {
       "type": 0,
       "value": "サインアウト"
+    }
+  ],
+  "xhRkpH": [
+    {
+      "type": 0,
+      "value": "折り返し"
     }
   ],
   "xmcVZ0": [
