--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1,9 +1,11 @@
 {
-  "/+Itm/": "Show minimap",
   "/rjLPg": "Please select or create a file to start",
   "0L2J5T": "New file",
   "14KiwR": "There is nothing here",
+  "3cc4Ct": "Light",
   "47FYwb": "Cancel",
+  "5929Xm": "Change theme",
+  "5KHmz1": "Minimap",
   "5q3qC0": "Download",
   "6qF/vN": "Terms and Conditions",
   "6tm4ZV": "What is Hitofude?",
@@ -16,6 +18,7 @@
   "9ZoFpI": "Delete file",
   "AbnnL+": "Sign in with Microsoft account",
   "B60rtd": "Open with OneDrive",
+  "D3idYv": "Settings",
   "DcY8fl": "Updated date",
   "HAlOn1": "Name",
   "HKsvaG": "Hide other files",
@@ -55,12 +58,14 @@
   "pFkv/g": "Copy file",
   "ppAn7O": "File name",
   "rELDbB": "Refresh",
-  "rkvFU3": "Hide minimap",
+  "rbrahO": "Close",
   "sQtSD2": "Are you sure to delete this file?",
+  "tOdNiY": "Dark",
   "utNSND": "Select working directory",
   "vx0nkZ": "Privacy Policy",
   "wEQDC6": "Edit",
   "wO9wb5": "GitHub",
   "xXbJso": "Sign out",
+  "xhRkpH": "Word wrap",
   "xmcVZ0": "Search"
 }
