--- a/src/translations/ja.json
+++ b/src/translations/ja.json
@@ -1,9 +1,11 @@
 {
-  "/+Itm/": "ミニマップを表示",
   "/rjLPg": "開始するにはファイルを選択または作成してください",
   "0L2J5T": "新しいファイル",
   "14KiwR": "ここには何もありません",
+  "3cc4Ct": "ライト",
   "47FYwb": "キャンセル",
+  "5929Xm": "外観の変更",
+  "5KHmz1": "ミニマップ",
   "5q3qC0": "ダウンロード",
   "6qF/vN": "利用規約",
   "6tm4ZV": "Hitofude とは？",
@@ -16,6 +18,7 @@
   "9ZoFpI": "ファイルの削除",
   "AbnnL+": "Microsoft アカウントでサインイン",
   "B60rtd": "OneDrive で開く",
+  "D3idYv": "設定",
   "DcY8fl": "更新日時",
   "HAlOn1": "名前",
   "HKsvaG": "その他のファイルを非表示",
@@ -55,12 +58,14 @@
   "pFkv/g": "ファイルのコピー",
   "ppAn7O": "ファイル名",
   "rELDbB": "最新の状態に更新",
-  "rkvFU3": "ミニマップを非表示",
+  "rbrahO": "閉じる",
   "sQtSD2": "ファイルを削除します。よろしいですか？",
+  "tOdNiY": "ダーク",
   "utNSND": "作業ディレクトリの選択",
   "vx0nkZ": "プライバシー ポリシー",
   "wEQDC6": "編集",
   "wO9wb5": "GitHub",
   "xXbJso": "サインアウト",
+  "xhRkpH": "折り返し",
   "xmcVZ0": "検索"
 }
