--- a/src/translations/compiled/en.json
+++ b/src/translations/compiled/en.json
@@ -113,6 +113,12 @@
       "value": "Open with OneDrive"
     }
   ],
+  "CnpnLn": [
+    {
+      "type": 0,
+      "value": "Sync scroll"
+    }
+  ],
   "D3idYv": [
     {
       "type": 0,
