--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -18,6 +18,7 @@
   "9ZoFpI": "Delete file",
   "AbnnL+": "Sign in with Microsoft account",
   "B60rtd": "Open with OneDrive",
+  "CnpnLn": "Sync scroll",
   "D3idYv": "Settings",
   "DcY8fl": "Updated date",
   "HAlOn1": "Name",
