--- a/src/translations/ja.json
+++ b/src/translations/ja.json
@@ -18,6 +18,7 @@
   "9ZoFpI": "ファイルの削除",
   "AbnnL+": "Microsoft アカウントでサインイン",
   "B60rtd": "OneDrive で開く",
+  "CnpnLn": "スクロールの同期",
   "D3idYv": "設定",
   "DcY8fl": "更新日時",
   "HAlOn1": "名前",
