--- a/src/translations/compiled/ja.json
+++ b/src/translations/compiled/ja.json
@@ -131,6 +131,12 @@
       "value": "更新日時"
     }
   ],
+  "Dkkmwm": [
+    {
+      "type": 0,
+      "value": "太字"
+    }
+  ],
   "Emw6OK": [
     {
       "type": 0,
@@ -189,6 +195,12 @@
     {
       "type": 0,
       "value": "クライアントの JavaScript コードのみで動作し、サーバーのコードを含みません。"
+    }
+  ],
+  "SOtMvF": [
+    {
+      "type": 0,
+      "value": "下線"
     }
   ],
   "TDaF6J": [
@@ -279,6 +291,12 @@
     {
       "type": 0,
       "value": "ファイルを復元します。よろしいですか？"
+    }
+  ],
+  "g2V+es": [
+    {
+      "type": 0,
+      "value": "斜体"
     }
   ],
   "gfMwV+": [
