--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -21,6 +21,7 @@
   "CnpnLn": "Sync scroll",
   "D3idYv": "Settings",
   "DcY8fl": "Updated date",
+  "Dkkmwm": "Bold",
   "Emw6OK": "OneDrive",
   "HAlOn1": "Name",
   "HKsvaG": "Hide other files",
@@ -31,6 +32,7 @@
   "OijyGx": "We can't find the page you're looking for",
   "QRccCM": "Page not found",
   "RolcOL": "Only runs client JavaScript, no server code is executed.",
+  "SOtMvF": "Underline",
   "TDaF6J": "Dismiss",
   "TNqh3Y": "A web application that enables to you to write Markdown file via OneDrive (Personal, work or school).",
   "TiR/Hq": "Saving...",
@@ -46,6 +48,7 @@
   "cyR7Kh": "Back",
   "f/YV6d": "It's easy to get started. Just sign in.",
   "f5cgv/": "Are you sure to restore this file?",
+  "g2V+es": "Italic",
   "gfMwV+": "Cannot open this file",
   "ghuZox": "Save and Close",
   "gyrIEl": "File",
