--- a/src/translations/ja.json
+++ b/src/translations/ja.json
@@ -21,6 +21,7 @@
   "CnpnLn": "スクロールの同期",
   "D3idYv": "設定",
   "DcY8fl": "更新日時",
+  "Dkkmwm": "太字",
   "Emw6OK": "OneDrive",
   "HAlOn1": "名前",
   "HKsvaG": "その他のファイルを非表示",
@@ -31,6 +32,7 @@
   "OijyGx": "お探しのページを見つけることができませんでした",
   "QRccCM": "ページが見つかりません",
   "RolcOL": "クライアントの JavaScript コードのみで動作し、サーバーのコードを含みません。",
+  "SOtMvF": "下線",
   "TDaF6J": "閉じる",
   "TNqh3Y": "OneDrive (個人、職場または学校) で Markdown ファイルを書くための Web アプリケーションです。",
   "TiR/Hq": "保存しています...",
@@ -46,6 +48,7 @@
   "cyR7Kh": "戻る",
   "f/YV6d": "はじめるのは簡単です。サインインするだけです。",
   "f5cgv/": "ファイルを復元します。よろしいですか？",
+  "g2V+es": "斜体",
   "gfMwV+": "ファイルを開けません",
   "ghuZox": "保存して閉じる",
   "gyrIEl": "ファイル",
