--- a/src/translations/compiled/ja.json
+++ b/src/translations/compiled/ja.json
@@ -167,6 +167,12 @@
       "value": "バージョン"
     }
   ],
+  "JEsxDw": [
+    {
+      "type": 0,
+      "value": "アップロードしています..."
+    }
+  ],
   "JqiqNj": [
     {
       "type": 0,
@@ -207,6 +213,12 @@
     {
       "type": 0,
       "value": "閉じる"
+    }
+  ],
+  "TJo5E6": [
+    {
+      "type": 0,
+      "value": "プレビュー"
     }
   ],
   "TNqh3Y": [
@@ -435,6 +447,12 @@
     {
       "type": 0,
       "value": "検索"
+    }
+  ],
+  "xyET3x": [
+    {
+      "type": 0,
+      "value": "ここにファイルをドラッグ アンド ドロップ"
     }
   ]
 }
