--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -27,6 +27,7 @@
   "HKsvaG": "Hide other files",
   "HjkLKL": "Unsupported file format",
   "I3b4hn": "Version",
+  "JEsxDw": "Uploading...",
   "JqiqNj": "Something went wrong",
   "M0iO6Z": "Delete folder",
   "OijyGx": "We can't find the page you're looking for",
@@ -34,6 +35,7 @@
   "RolcOL": "Only runs client JavaScript, no server code is executed.",
   "SOtMvF": "Underline",
   "TDaF6J": "Dismiss",
+  "TJo5E6": "Preview",
   "TNqh3Y": "A web application that enables to you to write Markdown file via OneDrive (Personal, work or school).",
   "TiR/Hq": "Saving...",
   "TkEsoc": "Version history",
@@ -71,5 +73,6 @@
   "wO9wb5": "GitHub",
   "xXbJso": "Sign out",
   "xhRkpH": "Word wrap",
-  "xmcVZ0": "Search"
+  "xmcVZ0": "Search",
+  "xyET3x": "Drag and drop files here"
 }
