--- a/src/translations/ja.json
+++ b/src/translations/ja.json
@@ -27,6 +27,7 @@
   "HKsvaG": "その他のファイルを非表示",
   "HjkLKL": "サポートされていないファイル形式です",
   "I3b4hn": "バージョン",
+  "JEsxDw": "アップロードしています...",
   "JqiqNj": "問題が発生しました",
   "M0iO6Z": "フォルダーの削除",
   "OijyGx": "お探しのページを見つけることができませんでした",
@@ -34,6 +35,7 @@
   "RolcOL": "クライアントの JavaScript コードのみで動作し、サーバーのコードを含みません。",
   "SOtMvF": "下線",
   "TDaF6J": "閉じる",
+  "TJo5E6": "プレビュー",
   "TNqh3Y": "OneDrive (個人、職場または学校) で Markdown ファイルを書くための Web アプリケーションです。",
   "TiR/Hq": "保存しています...",
   "TkEsoc": "バージョン履歴",
@@ -71,5 +73,6 @@
   "wO9wb5": "GitHub",
   "xXbJso": "サインアウト",
   "xhRkpH": "行の折り返し",
-  "xmcVZ0": "検索"
+  "xmcVZ0": "検索",
+  "xyET3x": "ここにファイルをドラッグ アンド ドロップ"
 }
