--- a/src/translations/compiled/ja.json
+++ b/src/translations/compiled/ja.json
@@ -1,4 +1,10 @@
 {
+  "/bAOgh": [
+    {
+      "type": 0,
+      "value": "ファイルを上書きします。よろしいですか？"
+    }
+  ],
   "/rjLPg": [
     {
       "type": 0,
@@ -179,6 +185,12 @@
       "value": "問題が発生しました"
     }
   ],
+  "LYCry0": [
+    {
+      "type": 0,
+      "value": "ファイルが競合しています"
+    }
+  ],
   "M0iO6Z": [
     {
       "type": 0,
@@ -275,10 +287,22 @@
       "value": "お使いのブラウザーを更新してください"
     }
   ],
+  "a5msuh": [
+    {
+      "type": 0,
+      "value": "はい"
+    }
+  ],
   "agOXPD": [
     {
       "type": 0,
       "value": "サイズ"
+    }
+  ],
+  "arHMOU": [
+    {
+      "type": 0,
+      "value": "ファイルの上書き"
     }
   ],
   "bJIPmM": [
@@ -357,6 +381,12 @@
     {
       "type": 0,
       "value": "エクスプローラー"
+    }
+  ],
+  "oUWADl": [
+    {
+      "type": 0,
+      "value": "いいえ"
     }
   ],
   "olfaAj": [
