--- a/src/translations/ja.json
+++ b/src/translations/ja.json
@@ -1,4 +1,5 @@
 {
+  "/bAOgh": "ファイルを上書きします。よろしいですか？",
   "/rjLPg": "開始するにはファイルを選択または作成してください",
   "0L2J5T": "新しいファイル",
   "14KiwR": "ここには何もありません",
@@ -29,6 +30,7 @@
   "I3b4hn": "バージョン",
   "JEsxDw": "アップロードしています...",
   "JqiqNj": "問題が発生しました",
+  "LYCry0": "ファイルが競合しています",
   "M0iO6Z": "フォルダーの削除",
   "OijyGx": "お探しのページを見つけることができませんでした",
   "QRccCM": "ページが見つかりません",
@@ -45,7 +47,9 @@
   "VlCOJS": "指定した名前のファイルはすでに存在します",
   "WSCjCg": "アイテムが見つかりません",
   "Z5spcL": "お使いのブラウザーを更新してください",
+  "a5msuh": "はい",
   "agOXPD": "サイズ",
+  "arHMOU": "ファイルの上書き",
   "bJIPmM": "指定した名前のフォルダーはすでに存在します",
   "cyR7Kh": "戻る",
   "f/YV6d": "はじめるのは簡単です。サインインするだけです。",
@@ -59,6 +63,7 @@
   "kAEQyV": "OK",
   "lR/7o8": "フォルダー名",
   "mJN/zn": "エクスプローラー",
+  "oUWADl": "いいえ",
   "olfaAj": "指定した名前のファイルは存在しません",
   "p69pc3": "オンライン Markdown エディター for Microsoft 365",
   "pFkv/g": "ファイルのコピー",
