--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1,4 +1,5 @@
 {
+  "/bAOgh": "Are you sure to overwrite file?",
   "/rjLPg": "Please select or create a file to start",
   "0L2J5T": "New file",
   "14KiwR": "There is nothing here",
@@ -29,6 +30,7 @@
   "I3b4hn": "Version",
   "JEsxDw": "Uploading...",
   "JqiqNj": "Something went wrong",
+  "LYCry0": "Conflict file",
   "M0iO6Z": "Delete folder",
   "OijyGx": "We can't find the page you're looking for",
   "QRccCM": "Page not found",
@@ -45,7 +47,9 @@
   "VlCOJS": "The file with the name already exists",
   "WSCjCg": "No items found",
   "Z5spcL": "Please try refreshing your browser",
+  "a5msuh": "Yes",
   "agOXPD": "Size",
+  "arHMOU": "Overwrite file",
   "bJIPmM": "The folder with the name already exists",
   "cyR7Kh": "Back",
   "f/YV6d": "It's easy to get started. Just sign in.",
@@ -59,6 +63,7 @@
   "kAEQyV": "OK",
   "lR/7o8": "Folder name",
   "mJN/zn": "Explorer",
+  "oUWADl": "No",
   "olfaAj": "The file with the name does not exists",
   "p69pc3": "Online Markdown Editor for Microsoft 365",
   "pFkv/g": "Copy file",
